Gustavo Dimeira - Segunda tentativa

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">MInha jornada pela trybe até o momento</h1>
+    <h1 id="titulo">MInha jornada pela <a href="https://www.betrybe.com/" target="-blank">Trybe</a> até o momento</h1>
   </header>
   <img id="minha_foto" src="WhatsApp Image 2022-02-24 at 10.10.59.jpeg" alt="" width="200px">
+  <nav>
+    <a class="atalhos" href="#licoes_aprendidas"><li>Habilidades</li></a>
+    <a class="atalhos" href="#licoes_aprendidas"><li>O que quero aprender</li></a>
+  </nav>
   <ol id="licoes_aprendidas">
     <li>HTML</li>
     <li>CSS</li>
@@ -37,7 +41,7 @@
     <li>Ciencia da computação</li>
     <li>Topicos avançados em programação</li>
   </ul>
-  <article><section>é o momento minha experiencia na Trybe tem sido muito satisfatória.<br><br>
+  <article><section>até o momento minha experiencia na Trybe tem sido muito satisfatória.<br><br>
     Sinto que consegui avançar muito em programação, mais do que um semestre de faculdade me proporcionou.<section><br><section>aprendemos um pouco sobre Unix & Bash, fui introduzido ao painel de controle e logo em seguida aprendisobre a função do GIT e GitHub, que vem se mostrado bem uteis, e logo em seguida já tivemos uma boa introdução ao HTML e CSS. Hoje já sou capaz de criar páginas em HTML e estiliza-las com CSS de forma relativamente rápida e bem
     orgânica.</section>
   </article>
