--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">MInha jornada pela <a href="https://www.betrybe.com/" target="-blank">Trybe</a> até o momento</h1>
+    <h1 id="titulo">MInha jornada pela trybe até o momento</h1>
   </header>
   <img id="minha_foto" src="WhatsApp Image 2022-02-24 at 10.10.59.jpeg" alt="" width="200px">
   <nav>
